# ResumeBuilder

./: .gitignore
resume-browser-extension/: background.js  contentScript.js  manifest.json  overlay.css  popup.html  popup.js
resume-browser-extension/styles/: panel.css
resume-dashboard/: package-lock.json  package.json  tailwind.config.js
resume-dashboard/src/: App.css  App.js  JobList.jsx  index.css  index.js  theme.js
resume-dashboard/src/components/: AnalyticalDashboard.jsx  Analytics.js  DashboardCard.jsx  DetailModal.jsx  Header.jsx  JobCard.jsx  JobDetail.jsx  JobList.jsx  PaginationControls.jsx  Sidebar.jsx  (+1 more)
resume-server/: .dockerignore  Dockerfile  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
resume-server/db/: connection.js
resume-server/db/models/: entity.js  job.js
resume-server/routes/: entityRoutes.js  generateResume.js  jobRoutes.js
resume-server/src/: main.py
resume-server/src/config/: app_config.py  startup.py
resume-server/src/models/: get_all_job_request.py  job_models.py  work_arrangement.py  work_location.py
resume-server/src/routes/: get_all_jobs.py  get_available_models.py  get_time_to_respond.py  home.py  job_operations.py  job_stats.py  post_add_job.py
resume-server/src/utils/: annotation_helpers.py  convert_mongo_document.py  error_handling.py  extract_job_details.py  google_search.py  initialize.py  openai_client.py  openai_helpers.py  session_management.py  url_helpers.py
resume-server/utils/: generateDocx.js  generatePDF.js  openaiClient.js  openai_client.py  resumeReader.js
(+5 files in other folders)
